# se_adaptive

./: .gitignore  404.html  README.md  explanations.md  index.html  mkdocs.yml  pyproject.toml  report.md
docs/: index.md
docs/features/: auto-generate.md  evaluation.md  export-import-examples.md  manual-drafting.md  visualization-versioning.md
docs/getting-started/: installation.md  quickstart.md
evals/: eval_report_dev_20250209_124053.json  eval_report_v0_20250209_150823.json  eval_report_v1_20250209_144754.json  eval_report_v2_20250209_220747.json
features/auto-generate/: index.html
features/evaluation/: index.html
features/export-import-examples/: index.html
features/manual-drafting/: index.html
features/visualization-versioning/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/cai/: auto_generate.py  critique_rewrite.py  domain.py  entities.py  eval.py  library_versions.py  llm.py  models.py  versioning.py
src/cai/app/: __init__.py  app.py  main.py
src/cai/app/components/: action_buttons.py  example_display.py  prompt_input.py  version_controls.py
src/cai/app/pages/: 1_Examples_Drafting.py  1_📝_Manual_Drafting.py  2_Auto_Generate.py  2_Examples_Library.py  2_Visualisation_&_Versioning.py  2_🤖_Auto_Generate.py  3_Evaluation.py  3_Visualisation_&_Versioning.py  3_📊_Visualisation_&_Versioning.py  (+4 more)
src/cai/data/: few_shot_examples.jsonl  validation.jsonl
src/cai/examples/: ex_dev.jsonl  ex_v2.jsonl
src/cai/libraries/: lib_v0.jsonl
tests/: test_eval.py
(+2 files in other folders)
