[project]
name = "cai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dullint", email = "theo.dullin@orange.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.61.1,<2.0.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[project.scripts]
cai-app = "cai.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cai"]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.3"
